--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,6 +37,7 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           images: ${{ env.REGISTRY }}/${{ env.OWNER_LOWER }}/readally-backend
+          tags: type=raw,value=latest
 
       - name: Build and push Backend
         uses: docker/build-push-action@v5
@@ -52,6 +53,7 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           images: ${{ env.REGISTRY }}/${{ env.OWNER_LOWER }}/readally-frontend
+          tags: type=raw,value=latest
 
       - name: Build and push Frontend
         uses: docker/build-push-action@v5
