docs: streamline Docker deployment instructions and add manual local development guide

--- a/docker/.env.example
+++ b/docker/.env.example
@@ -2,6 +2,5 @@
 DASHSCOPE_API_KEY=
 
 # Frontend Configuration
-# If running locally with Docker Compose, this likely can be empty to use the Relative URL or configured to localhost.
-# For production, set to the actual domain.
+# 本地开发时需设置指定后端API地址，生产环境留空自动使用当前域名
 NEXT_PUBLIC_API_URL=
