--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,1 +1,6 @@
+# Backend Configuration
 DASHSCOPE_API_KEY=
+# Optional: Defaults to sqlite:///./readally.db if not set
+DATABASE_URL=sqlite:///./readally.db
+# Optional: Defaults to static/ if not set
+STATIC_DIR=static
