--- a/docker/.env.example
+++ b/docker/.env.example
@@ -2,5 +2,6 @@
 DASHSCOPE_API_KEY=
 
 # Frontend Configuration
-# 本地开发时需设置指定后端API地址，生产环境留空自动使用当前域名
-NEXT_PUBLIC_API_URL=
+# For Docker local dev (browser access), this should be http://localhost:8000
+# For Production, leave empty to use relative path (if served on same domain) or set to specific domain
+NEXT_PUBLIC_API_URL=http://localhost:8000
