feat: Configure Next.js Server Actions allowed origins, update pnpm registry in frontend Dockerfile, and modify uv installation in backend Dockerfile.

--- a/docker/.env.example
+++ b/docker/.env.example
@@ -5,3 +5,7 @@ DASHSCOPE_API_KEY=
 # For Docker local dev (browser access), this should be http://localhost:8000
 # For Production, leave empty to use relative path (if served on same domain) or set to specific domain
 NEXT_PUBLIC_API_URL=http://localhost:8000
+
+# Optional: Comma-separated list of additional allowed origins for Server Actions
+# e.g., mydomain.com,www.mydomain.com
+ALLOWED_ORIGINS=
