feat: add SECRET_KEY to .env.example and clarify NEXT_PUBLIC_API_URL comment

--- a/docker/.env.example
+++ b/docker/.env.example
@@ -1,8 +1,11 @@
+# 后端API密钥,使用openssl rand -base64 32命令生成
+SECRET_KEY=
+
 # Backend Configuration
 DASHSCOPE_API_KEY=
 
 # Frontend Configuration
-# For Docker local dev (browser access), this should be http://localhost:8000
+# For Docker compose local deployment, this should be http://localhost:8000
 # For Production, leave empty to use relative path (if served on same domain) or set to specific domain
 NEXT_PUBLIC_API_URL=http://localhost:8000
 
