--- a/docker/.env.example
+++ b/docker/.env.example
@@ -11,4 +11,5 @@ NEXT_PUBLIC_API_URL=http://localhost:8000
 
 # Optional: Comma-separated list of additional allowed origins for Server Actions
 # e.g., mydomain.com,www.mydomain.com
+# 生产环境防止跨域问题
 ALLOWED_ORIGINS=
