--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -22,6 +22,8 @@ services:
     build:
       context: ../frontend
       dockerfile: ../docker/frontend.Dockerfile
+      args:
+        - NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL:-http://localhost:8000}
     image: ghcr.io/${GITHUB_REPOSITORY_OWNER:-vinland100}/readally-frontend:latest
     container_name: readally-frontend
     restart: always
