--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,24 @@
-# Backend Configuration
+# ==========================================
+# ReadAlly.AI Backend Configuration (Local Dev)
+# ==========================================
+
+# ------------------------------
+# Security
+# ------------------------------
+# Required: Generate a random string (e.g., `openssl rand -base64 32`)
+SECRET_KEY=
+
+# Required: DashScope API Key for AI features
 DASHSCOPE_API_KEY=
-# Optional: Defaults to sqlite:///./readally.db if not set
+
+# ------------------------------
+# Database & Storage
+# ------------------------------
+# Database Connection String
+# For Local Dev, this defaults to creating 'readally.db' in the CURRENT directory (backend/).
+# Format: sqlite:///./<filename>
 DATABASE_URL=sqlite:///./readally.db
-# Optional: Defaults to static/ if not set
+
+# Static files (audio, etc.) storage directory
+# Defaults to 'static/' in the current directory.
 STATIC_DIR=static
