--- a/docker/.env.example
+++ b/docker/.env.example
@@ -1,15 +1,41 @@
-# 后端API密钥,使用openssl rand -base64 32命令生成
+# ==========================================
+# ReadAlly.AI Docker Configuration
+# ==========================================
+
+# ------------------------------
+# Security & Secrets
+# ------------------------------
+# Backend API Secret Key. Generate using: openssl rand -base64 32
+# Required for JWT token generation and security.
 SECRET_KEY=
 
-# Backend Configuration
+# DashScope API Key for AI features (Qwen).
+# Get one from Aliyun DashScope console.
 DASHSCOPE_API_KEY=
 
+# ------------------------------
 # Frontend Configuration
-# For Docker compose local deployment, this should be http://localhost:8000
-# For Production, leave empty to use relative path (if served on same domain) or set to specific domain
+# ------------------------------
+# PUBLIC URL of the Backend API.
+# - For Local Docker Testing: http://localhost:8000
+# - For Production: Your actual domain (e.g., https://api.vinland100.tech) or leave empty if serving on same domain.
 NEXT_PUBLIC_API_URL=http://localhost:8000
 
-# Optional: Comma-separated list of additional allowed origins for Server Actions
-# e.g., mydomain.com,www.mydomain.com
-# 生产环境防止跨域问题
-ALLOWED_ORIGINS=
+# ------------------------------
+# Backend Configuration
+# ------------------------------
+# CORS Allowed Origins
+# Comma-separated list of domains that can access the API.
+# - For Local Docker: http://localhost:3000
+# - For Production: https://vinland100.tech,https://www.vinland100.tech
+ALLOWED_ORIGINS=http://localhost:3000
+
+# Database URL
+# In Docker, this path is INSIDE the container. 
+# We map the volume to /app/data, so the DB should be there to persist.
+# DO NOT CHANGE unless you know what you are doing.
+DATABASE_URL=sqlite:////app/data/readally.db
+
+# Static File Directory
+# In Docker, this is also mapped to the volume to persist generated audio files.
+STATIC_DIR=/app/data/static
