--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,2 +1,10 @@
-# For manual local development, point to the local backend
+# ==========================================
+# ReadAlly.AI Frontend Configuration (Local Dev)
+# ==========================================
+
+# ------------------------------
+# API Connection
+# ------------------------------
+# URL of the Backend API reachable by the browser.
+# For local development with backend running on port 8000:
 NEXT_PUBLIC_API_URL=http://localhost:8000
