chore: Generalize example domains in .env.example.

--- a/docker/.env.example
+++ b/docker/.env.example
@@ -18,7 +18,7 @@ DASHSCOPE_API_KEY=
 # ------------------------------
 # PUBLIC URL of the Backend API.
 # - For Local Docker Testing: http://localhost:8000
-# - For Production: Your actual domain (e.g., https://api.vinland100.tech) or leave empty if serving on same domain.
+# - For Production: Your actual domain (e.g., https://api.example.com) or leave empty if serving on same domain.
 NEXT_PUBLIC_API_URL=http://localhost:8000
 
 # ------------------------------
@@ -27,7 +27,7 @@ NEXT_PUBLIC_API_URL=http://localhost:8000
 # CORS Allowed Origins
 # Comma-separated list of domains that can access the API.
 # - For Local Docker: http://localhost:3000
-# - For Production: https://vinland100.tech,https://www.vinland100.tech
+# - For Production: your domain eg. https://example.com,https://www.example.com
 ALLOWED_ORIGINS=http://localhost:3000
 
 # Database URL
